# sparrow-3d

./: AlphaWrapper.cpp  AlphaWrapper.h  Benchmark_Discrete_Rotation.cpp  Benchmark_Fixed_Rotation.cpp  CMakeLists.txt  EnhancedStripPackingSolution.cpp  EnhancedStripPackingSolution.h  InaccessibilityPoles.cpp  InaccessibilityPoles.h  README.md  RenderPolesOfInaccessibility.cpp  Render_Item_Poles.cpp  Render_Solution_Poles.cpp  StripPacking_Discrete_Rotation.cpp  StripPacking_Fixed_Rotation.cpp  StripPacking_GLS.cpp  main.cpp  vcpkg.json
include/: BenchmarkObserver.h  DiscreteRotationStripPackingTask.h  EnhancedStripPackingSolution.h  FixedRotationStripPackingTask.h  InaccessibilityPoles.h  SparrowOptions.h
solutions/discrete/: benchmark_results_Discrete_Apple_M5.csv
solutions/fixed/: benchmark_results_Fixed_Apple_M5.csv
src/: DiscreteRotationStripPackingTask.cpp  EnhancedStripPackingSolution.cpp  FixedRotationStripPackingTask.cpp  InaccessibilityPoles.cpp
